[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crow-kit"
version = "0.3.2"
description = "Crow Kit: workflow and tooling utilities"
readme = "README.md"
license = "MIT"
authors = [
{ name = "Kallol Naha" }
]
requires-python = ">=3.8"

dependencies = [
  "selenium>=4.10",
  "webdriver-manager>=4.0",
  "playwright>=1.41.0",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["crow_kit*"]
exclude = ["testenv*", "tests*", "docs*", "examples*", "dist*", "build*"]
